# perception_system_v2

./: CMakeLists.txt  README.md  package.xml
config/: lidarslam.yaml  lidarslam_cam.yaml
description/: box.xacro  lidar.xacro  soporte.xacro  soporte_camera.xacro  soporte_core.xacro  soporte_core_145.xacro  soporte_core_hexag.xacro
launch/: lidarslam.launch.py  lidarslam_cam.launch.py  lidarslam_cam_and_lid.launch.py  lidarslam_lid.launch.py  spawn_systems.launch.py
meshes/: base.dae  box.dae  camera_base.dae  lidar_base.dae  soporte_145grad.dae  soporte_160grad.dae  soporte_hexag.dae
rviz/: mapping.rviz  multicam.rviz
